fix scrollbar

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -140,17 +140,13 @@ code {
 
 pre {
     padding: 8px 12px;
-    overflow-x: scroll;
+    overflow-x: auto;
 
     > code {
         border: 0;
         padding-right: 0;
         padding-left: 0;
     }
-}
-
-pre.line-pre {
-  overflow-x: auto;
 }
 
 .sidebar
